[gd_scene load_steps=9 format=3 uid="uid://c1g1migy67sum"]

[ext_resource type="Script" uid="uid://ki7t8q3q3we2" path="res://pause_menu/Scripts/pause_menu.gd" id="1_5hbt6"]
[ext_resource type="PackedScene" uid="uid://ddv3fn1pa7b7o" path="res://pause_menu/map_node.tscn" id="2_rd7dy"]

[sub_resource type="FontVariation" id="FontVariation_5hbt6"]
spacing_glyph = 6

[sub_resource type="Gradient" id="Gradient_rd7dy"]
offsets = PackedFloat32Array(0, 0.55284554, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.36078432, 0.70980394, 0.8901961, 1, 0, 0, 0.9607843, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uwtdo"]
gradient = SubResource("Gradient_rd7dy")
width = 5
height = 5
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="Animation" id="Animation_b4s0c"]
resource_name = "default"
length = 0.7
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.09411765, 0.29803923, 0.8352941, 0.74509805)]
}

[sub_resource type="Animation" id="Animation_s1glv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wn31l"]
_data = {
&"RESET": SubResource("Animation_s1glv"),
&"default": SubResource("Animation_b4s0c")
}

[node name="Pause_Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_5hbt6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08235294, 0.07450981, 0.07450981, 0.63529414)

[node name="ColorRect2" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Control/ColorRect2"]
modulate = Color(0.44569075, 0.2456672, 0.21502914, 1)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -7.5
offset_right = -10.0
offset_bottom = 7.5
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_5hbt6")
text = "PAUSED"
horizontal_alignment = 2

[node name="pause_screen" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="map" type="Control" parent="Control/pause_screen"]
anchors_preset = 0
offset_left = 99.0
offset_top = 7.0
offset_right = 463.0
offset_bottom = 193.0
scale = Vector2(2, 2)

[node name="map_node" parent="Control/pause_screen/map" instance=ExtResource("2_rd7dy")]
modulate = Color(0.38039216, 0.5686275, 0.3019608, 1)
layout_mode = 0
offset_left = 13.0
offset_top = 37.0
offset_right = 41.0
offset_bottom = 45.0
linked_scene = "uid://cb886t8m51hde"
entranes_top = Array[float]([])
entranes_right = Array[float]([3.2])
entranes_bottom = Array[float]([])
entranes_left = Array[float]([2.0999999999999996])

[node name="map_node2" parent="Control/pause_screen/map" instance=ExtResource("2_rd7dy")]
modulate = Color(0.38039216, 0.5686275, 0.3019608, 1)
layout_mode = 0
offset_left = 42.0
offset_top = 37.0
offset_right = 71.0
offset_bottom = 45.0
linked_scene = "uid://dbws3ync16n1s"
entranes_top = Array[float]([])
entranes_right = Array[float]([2.25])
entranes_bottom = Array[float]([4.05])
entranes_left = Array[float]([2.4000000000000004])

[node name="map_node3" parent="Control/pause_screen/map" instance=ExtResource("2_rd7dy")]
modulate = Color(1, 0.45490196, 0.6156863, 1)
layout_mode = 0
offset_left = 72.0
offset_top = 37.5
offset_right = 84.0
offset_bottom = 44.5
linked_scene = "uid://cuyoqrryc3www"
entranes_top = Array[float]([])
entranes_right = Array[float]([2.0])
entranes_bottom = Array[float]([])
entranes_left = Array[float]([2.0])

[node name="map_node4" parent="Control/pause_screen/map" instance=ExtResource("2_rd7dy")]
modulate = Color(0.29803923, 0.47058824, 0.63529414, 1)
layout_mode = 0
offset_left = 42.0
offset_top = 46.0
offset_right = 71.0
offset_bottom = 53.0
linked_scene = "uid://cvp1dgtknfga3"
entranes_top = Array[float]([4.0])
entranes_right = Array[float]([])
entranes_bottom = Array[float]([])
entranes_left = Array[float]([])

[node name="player_indecator" type="Control" parent="Control/pause_screen/map"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
offset_left = 33.0
offset_top = 42.0
offset_right = 33.0
offset_bottom = 42.0

[node name="TextureRect" type="TextureRect" parent="Control/pause_screen/map/player_indecator"]
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
texture = SubResource("GradientTexture2D_uwtdo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/pause_screen/map/player_indecator"]
libraries = {
&"": SubResource("AnimationLibrary_wn31l")
}
autoplay = "default"

[node name="Abilities" type="Label" parent="Control/pause_screen"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 67.0
offset_bottom = 23.0
text = "Abilities"

[node name="Label2" type="Label" parent="Control/pause_screen"]
layout_mode = 0
offset_left = 99.0
offset_top = 8.0
offset_right = 139.0
offset_bottom = 23.0
text = "Map"

[node name="system_menu_Button" type="Button" parent="Control/pause_screen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = -31.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "System"

[node name="system" type="Control" parent="Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/system"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_top = 20.0
offset_right = 132.0
offset_bottom = 213.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Control/system/VBoxContainer"]
layout_mode = 2

[node name="Back_map_Button" type="Button" parent="Control/system/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back to map"

[node name="Back_Title_Button" type="Button" parent="Control/system/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Title"

[node name="Label" type="Label" parent="Control/system/VBoxContainer"]
layout_mode = 2
text = "Audio levels"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/system/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/system/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Music"

[node name="Music_Slider" type="HSlider" parent="Control/system/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/system/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/system/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "SFX"

[node name="SFX_Slider" type="HSlider" parent="Control/system/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/system/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/system/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "UI"

[node name="UI_Slider" type="HSlider" parent="Control/system/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
